--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -8,13 +8,13 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v1
       with:
-        python-version: 3.10.8
+        python-version: '3.10'
     - name: Install dependencies
       run: |
         make install
     - name: Lint with pylint
       run: |
-        #make lint
+        make lint
     - name: Test with pytest
       run: |
         #make test
