--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 pytest
-pytest-cov
 pylint
-black
-fire
+click
+databricks
+ipython
+databricks-sql-connector
+databricks-connect==10.4.*
+fastapi
+uvicorn[standard]
+dask
+dask[distributed]
+jupyter
+s3fs
+bokeh
+streamlit
